# polars

./: Cargo.toml
.config/: rail.toml
.github/workflows/: lint-rust.yml  test-rust.yml
crates/polars/: Cargo.toml
crates/polars-arrow/: Cargo.toml
crates/polars-compute/: Cargo.toml
crates/polars-core/: Cargo.toml
crates/polars-lazy/: Cargo.toml
crates/polars-parquet/: Cargo.toml
crates/polars-plan/: Cargo.toml
crates/polars-schema/: Cargo.toml
