[package]
name = "polars-parquet"
version = { workspace = true }
authors = [
  "Jorge C. Leitao <jorgecarleitao@gmail.com>",
  "Apache Arrow <dev@arrow.apache.org>",
  "Ritchie Vink <ritchie46@gmail.com>",
]
edition = { workspace = true }
homepage = { workspace = true }
license = "MIT AND Apache-2.0"
repository = { workspace = true }
description = "Apache Parquet I/O operations for Polars"

[dependencies]
arrow = { workspace = true, features = ["io_ipc"] }

async-stream = { version = "0.3.3", optional = true }
base64 = { workspace = true }

brotli = { version = "8", optional = true }
bytemuck = { workspace = true }
ethnum = { workspace = true }
fallible-streaming-iterator = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hashbrown = { workspace = true }
lz4 = { workspace = true, optional = true } #unified
lz4_flex = { version = "0.11", optional = true }
num-traits = { workspace = true }
polars-compute = { workspace = true, features = ["approx_unique", "cast"] }
polars-error = { workspace = true }
polars-parquet-format = "0.1"
polars-utils = { workspace = true, features = ["mmap"] }

proptest = { workspace = true, optional = true }
regex = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
simdutf8 = { workspace = true }
snap = { version = "^1.1", optional = true }

streaming-decompression = "0.1"

xxhash-rust = { version = "0.8", optional = true, features = ["xxh64"] }
zstd = { workspace = true, optional = true }

[dev-dependencies]
# ensure that the proptest feature is enabled when we are testing
polars-parquet = { path = ".", features = ["proptest"] }

rand = { workspace = true }

[features]
compression = [
  "brotli",
  "gzip",
  "lz4",
  "snappy",
  "zstd",
]

# compression backends
snappy = ["snap"]
gzip = ["flate2/zlib-rs"]
lz4 = ["dep:lz4"]
lz4_flex = ["dep:lz4_flex"]

async = ["async-stream", "futures", "polars-parquet-format/async"]
bloom_filter = ["xxhash-rust"]
serde = ["dep:serde", "polars-utils/serde"]
dsl-schema = ["dep:schemars"]
simd = ["polars-compute/simd"]

proptest = ["dep:proptest", "arrow/proptest"]

[lints]
workspace = true
